merge from l64-branch