@@ -24,7 +24,7 @@ import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.limewire.collection.ApproximateMatcher;
 import org.limewire.collection.FixedSizeExpiringSet;
-import org.limewire.collection.Interval;
+import org.limewire.collection.Range;
 import org.limewire.concurrent.ThreadExecutor;
 import org.limewire.io.DiskException;
 import org.limewire.io.IOUtils;
@@ -542,7 +542,7 @@ public class ManagedDownloader extends AbstractDownloader
 		if (propertiesMap.get(DEFAULT_FILENAME) == null)
 			propertiesMap.put(DEFAULT_FILENAME,rfd.getFileName());
 		if (propertiesMap.get(FILE_SIZE) == null)
-			propertiesMap.put(FILE_SIZE,new Integer(rfd.getSize()));
+			propertiesMap.put(FILE_SIZE,Long.valueOf(rfd.getSize()));
     }
     
     /** 
@@ -1326,7 +1326,7 @@ public class ManagedDownloader extends AbstractDownloader
 	 * @param fileSize, can be 0
 	 * @return
 	 */
-	public boolean conflicts(URN urn, int fileSize, File... fileName) {
+	public boolean conflicts(URN urn, long fileSize, File... fileName) {
 		if (urn != null && downloadSHA1 != null) {
 			return urn.equals(downloadSHA1);
 		}
@@ -1509,7 +1509,7 @@ public class ManagedDownloader extends AbstractDownloader
                         
                         // TODO: Gnutella is not 64bit compatible
                         if (contentLength <= Integer.MAX_VALUE) {
-                            propertiesMap.put(FILE_SIZE, (int)contentLength);
+                            propertiesMap.put(FILE_SIZE, contentLength);
                         }
                     }
                 }
@@ -2005,7 +2005,7 @@ public class ManagedDownloader extends AbstractDownloader
                                    +incompleteFile.getName());
             //Get the size of the first block of the file.  (Remember
             //that swarmed downloads don't always write in order.)
-            int size=amountForPreview();
+            long size=amountForPreview();
             if (size<=0)
                 return null;
             //Copy first block, returning if nothing was copied.
@@ -2024,14 +2024,14 @@ public class ManagedDownloader extends AbstractDownloader
      * Returns the amount of the file written on disk that can be safely
      * previewed. 
      */
-    private synchronized int amountForPreview() {
+    private synchronized long amountForPreview() {
         //And find the first block.
         if (commonOutFile == null)
             return 0; // trying to preview before incomplete file created
         synchronized (commonOutFile) {
-            for(Interval interval : commonOutFile.getBlocks()) {
-                if (interval.low==0)
-                    return interval.high;
+            for(Range interval : commonOutFile.getBlocks()) {
+                if (interval.getLow()==0)
+                    return interval.getHigh();
             }
         }
         return 0;//Nothing to preview!
@@ -2872,8 +2872,8 @@ public class ManagedDownloader extends AbstractDownloader
 	 * properties map under {@link #FILE_SIZE}.
 	 */
     public synchronized long getContentLength() {
-        Integer i = (Integer)propertiesMap.get(FILE_SIZE);
-        return i != null ? i.intValue() : -1;
+        Number i = (Number)propertiesMap.get(FILE_SIZE);
+        return i != null ? i.longValue() : -1;
     }
 
     /**
@@ -2909,7 +2909,7 @@ public class ManagedDownloader extends AbstractDownloader
             ourFile = commonOutFile;
         }
         
-        return ourFile == null ? 0 : ourFile.getPendingSize();
+        return (int)(ourFile == null ? 0 : ourFile.getPendingSize());
     }
      
     public int getNumHosts() {
